@@ -226,8 +226,8 @@
      <para>
       The battery monitor supports a number of power management backends. If it
       is available, the monitor will attempt to use the freedesktop.org
-      <ulink url="http://freedesktop.org/Software/hal">Hardware Abstraction
-      Layer</ulink>. If it is unavailble or unsupported on your platform, the
+      <ulink url="http://freedesktop.org/Software/hal">HAL (Hardware Abstraction
+      Layer)</ulink>. If it is unavailable or unsupported on your platform, the
       battery monitor will attempt direct access to the power management system.
      </para>
      <para>
@@ -431,7 +431,7 @@
       Other backends do not currently give indication they are being used, so
       you will have to guess based on your hardware. Most modern PC laptops are
       using ACPI as the backend. This is also the backend with the largest
-      number of inconsistancies.
+      number of inconsistencies.
      </para>
     </sect2>
 
