@@ -1,3 +1,9 @@
+2008-03-12  Callum McKenzie  <callum@spooky-possum.org>
+
+	* docs/C/battstat.xml: Use the "well-known" abbreviation HAL as
+	well as the full wording (thanks to Leonardo Ferreira Fontelle,
+	bug #521243) plus spelling fixes.
+
 2008-03-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* docs/Makefile.am: Added pt_BR to DOC_LINGUAS.
